# Algorithms-Problem-Solving-Level-3

./: .gitignore  CMakeLists.txt
libraries/StringLib/: CMakeLists.txt
libraries/StringLib/include/: CheckString.hpp  StringLib.hpp  (+2 more)
libraries/array/: CMakeLists.txt
libraries/check/: CMakeLists.txt
libraries/display/: CMakeLists.txt
libraries/enums/: CMakeLists.txt
libraries/error/: CMakeLists.txt
libraries/file/: CMakeLists.txt
libraries/input/: CMakeLists.txt
libraries/math/: CMakeLists.txt
libraries/matrix/: CMakeLists.txt
problem/01_3_x_3_random_matrix/: CMakeLists.txt
problem/02_sum_each_row_in_matrix/: CMakeLists.txt
problem/03_sum_each_row_in_matrix_in_array/: CMakeLists.txt
problem/04_sum_each_col_in_matrix/: CMakeLists.txt
problem/05_sum_each_col_in_matrix_in_array/: CMakeLists.txt
problem/06_3_x_3_ordered_matrix/: CMakeLists.txt
problem/07_transpose_matrix/: CMakeLists.txt
problem/08_multiply_two_matrices/: CMakeLists.txt
problem/09_print_middle_row_and_col_of_matrix/: CMakeLists.txt
problem/10_sum_of_matrix/: CMakeLists.txt
problem/11_check_matrices_equality/: CMakeLists.txt
problem/12_check_typical_matrices/: CMakeLists.txt
problem/13_check_identity_matrix/: CMakeLists.txt
problem/14_check_scalar_matrix/: CMakeLists.txt
problem/15_count_number_in_matrix/: CMakeLists.txt
problem/16_check_sparse_matrix/: CMakeLists.txt
problem/17_number_exists_in_matrix/: CMakeLists.txt
problem/18_intersected_numbers_in_matrices/: CMakeLists.txt
problem/19_min_max_number_in_matrix/: CMakeLists.txt
problem/20_palindrome_matrix/: CMakeLists.txt
problem/21_fibonacci_series/: CMakeLists.txt
problem/22_fibonacci_series_with_recursion/: CMakeLists.txt
problem/23_print_first_letter_of_each_word/: CMakeLists.txt
problem/24_upper_first_letter_of_each_word/: CMakeLists.txt
problem/25_lower_first_letter_of_each_word/: CMakeLists.txt
problem/26_upper_lower_all_letters_of_a_string/: CMakeLists.txt
problem/27_invert_character_case/: CMakeLists.txt
problem/28_invert_all_letters_case/: CMakeLists.txt
problem/29_count_small_capital_letters/: CMakeLists.txt
problem/30_count_letters/: CMakeLists.txt
problem/31_count_letters_match_case/: CMakeLists.txt
problem/32_is_vowel/: CMakeLists.txt
problem/33_count_vowel/: CMakeLists.txt
problem/34_print_all_vowels/: CMakeLists.txt
problem/35_print_each_word_in_string/: CMakeLists.txt
problem/36_count_each_word_in_string/: CMakeLists.txt
problem/37_split_string/: CMakeLists.txt
problem/38_trim_left_trim_right_trim/: CMakeLists.txt
problem/39_join_string/: CMakeLists.txt
problem/40_join_string_overloading/: CMakeLists.txt
problem/41_revers_words/: CMakeLists.txt
problem/42_replace_words/: CMakeLists.txt
problem/43_replace_words_custom/: CMakeLists.txt
problem/44_remove_punctuations/: CMakeLists.txt
problem/45_convert_record_to_line/: CMakeLists.txt
problem/46_convert_line_data_to_record/: CMakeLists.txt
problem/47_add_clients_to_file/: CMakeLists.txt
problem/48_show_all_clients/: CMakeLists.txt
problem/49_find_client_by_account_number/: CMakeLists.txt
problem/50_delete_client_by_account_number/: CMakeLists.txt
problem/51_update_client_by_account_number/: CMakeLists.txt
(+94 files in other folders)
