cmake_minimum_required(VERSION 3.10)
project(MainProject)

add_subdirectory(libraries/array)
add_subdirectory(libraries/check)
add_subdirectory(libraries/display)
add_subdirectory(libraries/enums)
add_subdirectory(libraries/error)
add_subdirectory(libraries/bank/client)
add_subdirectory(libraries/file)
add_subdirectory(libraries/input)
add_subdirectory(libraries/math)
add_subdirectory(libraries/matrix)
add_subdirectory(libraries/StringLib)
add_subdirectory(libraries/utils)


add_subdirectory(problem/01_3_x_3_random_matrix)
add_subdirectory(problem/02_sum_each_row_in_matrix)
add_subdirectory(problem/03_sum_each_row_in_matrix_in_array)
add_subdirectory(problem/04_sum_each_col_in_matrix)
add_subdirectory(problem/05_sum_each_col_in_matrix_in_array)
add_subdirectory(problem/06_3_x_3_ordered_matrix)
add_subdirectory(problem/07_transpose_matrix)
add_subdirectory(problem/08_multiply_two_matrices)
add_subdirectory(problem/09_print_middle_row_and_col_of_matrix)
add_subdirectory(problem/10_sum_of_matrix)
add_subdirectory(problem/11_check_matrices_equality)
add_subdirectory(problem/12_check_typical_matrices)
add_subdirectory(problem/13_check_identity_matrix)
add_subdirectory(problem/14_check_scalar_matrix)
add_subdirectory(problem/15_count_number_in_matrix)
add_subdirectory(problem/16_check_sparse_matrix)
add_subdirectory(problem/17_number_exists_in_matrix)
add_subdirectory(problem/18_intersected_numbers_in_matrices)
add_subdirectory(problem/19_min_max_number_in_matrix)
add_subdirectory(problem/20_palindrome_matrix)
add_subdirectory(problem/21_fibonacci_series)
add_subdirectory(problem/22_fibonacci_series_with_recursion)
add_subdirectory(problem/23_print_first_letter_of_each_word)
add_subdirectory(problem/24_upper_first_letter_of_each_word)
add_subdirectory(problem/25_lower_first_letter_of_each_word)
add_subdirectory(problem/26_upper_lower_all_letters_of_a_string)
add_subdirectory(problem/27_invert_character_case)
add_subdirectory(problem/28_invert_all_letters_case)
add_subdirectory(problem/29_count_small_capital_letters)
add_subdirectory(problem/30_count_letters)
add_subdirectory(problem/31_count_letters_match_case)
add_subdirectory(problem/32_is_vowel)
add_subdirectory(problem/33_count_vowel)
add_subdirectory(problem/34_print_all_vowels)
add_subdirectory(problem/35_print_each_word_in_string)
add_subdirectory(problem/36_count_each_word_in_string)
add_subdirectory(problem/37_split_string)
add_subdirectory(problem/38_trim_left_trim_right_trim)
add_subdirectory(problem/39_join_string)
add_subdirectory(problem/40_join_string_overloading)
add_subdirectory(problem/41_revers_words)
add_subdirectory(problem/42_replace_words)
add_subdirectory(problem/43_replace_words_custom)
add_subdirectory(problem/44_remove_punctuations)
add_subdirectory(problem/45_convert_record_to_line)
add_subdirectory(problem/46_convert_line_data_to_record)
add_subdirectory(problem/47_add_clients_to_file)
add_subdirectory(problem/48_show_all_clients)
add_subdirectory(problem/49_find_client_by_account_number)
add_subdirectory(problem/50_delete_client_by_account_number)
add_subdirectory(problem/51_update_client_by_account_number)
